tests/sources/invalid/generics/nested_generic_missing_close_errors.fire
// Nested generic type argument list missing its closing '>' in a variable
// declaration: Pair<Pair<int32, int32, string p; -- the inner Pair<...>
// never gets a closing '>' before the declared variable name.
copyable class Pair<T, U> {
    first: T;
    second: U;

    fn Pair(first: T, second: U) {
        this.first = first;
        this.second = second;
    }
}

Pair<Pair<int32, int32, p: string;  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-PARSE-0010 @6
//~^^ ERROR FS-PARSE-0010 @34
